Stage1 Analysis.ipynb

--- a/Stage1 Analysis.ipynb
+++ b/Stage1 Analysis.ipynb
@@ -38,7 +38,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the excel file into a DataFrame\n",
-    "df = pd.read_excel(r\"C:\\Users\\rajat\\Desktop\\Business Analyst\\Sem 04\\ADMN 5010 - Operational Analytics 2_FB\\Final Project\\product_reviews.xlsx\")"
+    "df = pd.read_excel(https://github.com/Rajat-BA/operational-analytics-angel-hair-noodle/blob/main/product_reviews.xlsx")"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "# Read the CSV file into a DataFrame with the correct header\n",
-    "df = pd.read_excel(r\"C:\\Users\\rajat\\Desktop\\Business Analyst\\Sem 04\\ADMN 5010 - Operational Analytics 2_FB\\Final Project\\product_reviews.xlsx\", header=1)\n"
+    "df = pd.read_excel("https://github.com/Rajat-BA/operational-analytics-angel-hair-noodle/blob/main/product_reviews.xlsx", header=1)\n"
    ]
   },
   {
